--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  permission_handler: ^11.0.1
+  image_picker: ^1.0.4
+  http: ^0.13.6
+  mime: ^1.0.4
+  http_parser: ^4.0.2
   cupertino_icons: ^1.0.2
   intl: ^0.18.0
 
