--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,9 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   intl: ^0.18.0
+  image_picker: ^1.0.4
+  camera: ^0.10.5+9
+  path_provider: ^2.1.2
 
 dev_dependencies:
   flutter_test:
